Refactoring real-time editors

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/attachment/attachment.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/attachment/attachment.component.html
@@ -79,8 +79,8 @@
     <!-- externalIds -->
     <p>external IDs</p>
     <cadmus-external-ids
-      [model$]="ids$"
-      (modelChange)="onIdsChanged($event)"
+      [ids]="initialIds"
+      (idsChange)="onIdsChange($event)"
     ></cadmus-external-ids>
   </div>
 
