--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
@@ -38,8 +38,8 @@
       <!-- sources -->
       <cadmus-doc-references
         [tagEntries]="tagEntries"
-        [model$]="sources$"
-        (modelChange)="onSourcesChange($event)"
+        [references]="initialSources"
+        (referencesChange)="onSourcesChange($event)"
       ></cadmus-doc-references>
     </mat-tab>
 
