--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration/ms-decoration.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration/ms-decoration.component.html
@@ -193,7 +193,11 @@
 
   <!-- references -->
   <mat-tab>
-    <cadmus-doc-references [model$]="references$"></cadmus-doc-references>
+    <cadmus-doc-references
+      [tagEntries]="docRefTagEntries"
+      [references]="initialReferences"
+      (referencesChange)="onReferencesChange($event)"
+    ></cadmus-doc-references>
   </mat-tab>
 
   <!-- buttons -->
