--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decorations-part/ms-decorations-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decorations-part/ms-decorations-part.component.html
@@ -98,6 +98,7 @@
             [decElemToolEntries]="decElemToolEntries"
             [decElemTypolEntries]="decElemTypolEntries"
             [decTypeHiddenEntries]="decTypeHiddenEntries"
+            [docRefTagEntries]="docRefTagEntries"
             (decorationChange)="onDecorationChange($event)"
             (editorClose)="onDecorationClose()"
           ></itinera-ms-decoration>
