--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-part/ms-history-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-part/ms-history-part.component.html
@@ -236,6 +236,7 @@
             <itinera-ms-history-person
               *ngIf="editedPerson"
               [model]="editedPerson"
+              [docRefTagEntries]="docRefTagEntries"
               [roleEntries]="roleEntries"
               [langEntries]="langEntries"
               [nameTypeEntries]="nameTypeEntries"
