--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-place-part/ms-place-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-place-part/ms-place-part.component.html
@@ -102,9 +102,9 @@
       <!-- sources -->
       <h4>sources</h4>
       <cadmus-doc-references
-        [model$]="sources$"
         [tagEntries]="tagEntries"
-        (modelChange)="onSourcesChange($event)"
+        [references]="initialSources"
+        (referencesChange)="onSourcesChange($event)"
       ></cadmus-doc-references>
     </mat-card-content>
     <mat-card-actions>
