--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-watermark/ms-watermark.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-watermark/ms-watermark.component.html
@@ -61,15 +61,15 @@
   <h4>date</h4>
   <cadmus-historical-date-editor
     [date]="date"
-    (dateChange)="onDateChanged($event)"
+    (dateChange)="onDateChange($event)"
   ></cadmus-historical-date-editor>
 
   <!-- ids -->
   <br>
   <h4>external IDs</h4>
   <cadmus-external-ids
-    [model$]="ids$"
-    (modelChange)="onIdsChanged($event)"
+    [ids]="initialIds"
+    (idsChange)="onIdsChange($event)"
   ></cadmus-external-ids>
 
   <!-- buttons -->
