--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotope/chronotope.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotope/chronotope.component.html
@@ -60,13 +60,12 @@
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>sources</mat-panel-title>
-      <mat-panel-description>{{ sources?.length || 0 }}</mat-panel-description>
     </mat-expansion-panel-header>
 
     <cadmus-doc-references
       [tagEntries]="docRefTagEntries"
-      [model$]="sources$"
-      (modelChange)="onSourcesChange($event)"
+      [references]="initialSources"
+      (referencesChange)="onSourcesChange($event)"
     ></cadmus-doc-references>
   </mat-expansion-panel>
 
