Better typing for thesauri

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layout/ms-layout.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layout/ms-layout.component.html
@@ -225,8 +225,8 @@
     </div>
     <itinera-decorated-counts
       [idEntries]="countEntries"
-      [model$]="counts$"
-      (modelChange)="onCountsChanged($event)"
+      [counts]="initialCounts"
+      (countsChange)="onCountsChange($event)"
     ></itinera-decorated-counts>
   </div>
 
