--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotope/chronotope.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotope/chronotope.component.html
@@ -31,6 +31,10 @@
         >place too long</mat-error
       >
     </mat-form-field>
+
+    &nbsp;
+    <!-- isPlaceDubious -->
+    <mat-checkbox [formControl]="placeDubious">dubious</mat-checkbox>
   </div>
 
   <!-- date -->
