--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layouts-part/ms-layouts-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layouts-part/ms-layouts-part.component.html
@@ -4,7 +4,7 @@
       <div mat-card-avatar>
         <mat-icon>picture_in_picture</mat-icon>
       </div>
-      <mat-card-title>Manuscript's Dimensions Part</mat-card-title>
+      <mat-card-title>Manuscript's Layouts Part</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <mat-tab-group [(selectedIndex)]="tabIndex">
@@ -74,8 +74,8 @@
                     <mat-icon>remove_circle</mat-icon>
                   </button>
                 </td>
-                <td>{{ layout.columnCount }}</td>
                 <td>{{ locationToString(layout.sample) }}</td>
+                <td>{{ layout.columnCount }}</td>
               </tr>
             </tbody>
           </table>
