--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-material-dsc-part/ms-material-dsc-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-material-dsc-part/ms-material-dsc-part.component.html
@@ -182,7 +182,7 @@
                     <mat-icon>remove_circle</mat-icon>
                   </button>
                 </td>
-                <td>{{ locationToString(p.location) }}</td>
+                <td>{{ rangeToString(p.range) }}</td>
               </tr>
             </tbody>
           </table>
