--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-composition-part/ms-composition-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-composition-part/ms-composition-part.component.html
@@ -190,8 +190,8 @@
                   </button>
                 </td>
                 <td>{{ s.label }}</td>
-                <td>{{ rangeToString(s.start) }}</td>
-                <td>{{ rangeToString(s.end) }}</td>
+                <td>{{ locationToString(s.start) }}</td>
+                <td>{{ locationToString(s.end) }}</td>
                 <td>{{ s.tag }}</td>
               </tr>
             </tbody>
