Handle thesaurus for hand's notes

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-hands-part/ms-hands-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-hands-part/ms-hands-part.component.html
@@ -93,6 +93,7 @@
             [reasonEntries]="reasonEntries"
             [rubrEntries]="rubrEntries"
             [langEntries]="langEntries"
+            [handNotePropEntries]="handNotePropEntries"
             (modelChange)="onHandSaved($event)"
             (editorClose)="onHandClosed()"
           ></itinera-ms-hand>
