Size in ms binding

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-binding-part/ms-binding-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-binding-part/ms-binding-part.component.html
@@ -144,7 +144,8 @@
         <!-- size -->
         <h4>size</h4>
         <cadmus-physical-size
-          [(size)]="size"
+          [size]="initialSize"
+          (sizeChange)="onSizeChange($event)"
           [tagEntries]="sizeTagEntries"
           [dimTagEntries]="dimTagEntries"
           [unitEntries]="unitEntries"
